Added Unit Tests

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -15,3 +15,7 @@ spring:
       package-to-scan: org.damiane.entity
     repositories:
       bootstrap-mode: deferred
+
+
+  profiles:
+    active: dev
