--- a/pom.xml
+++ b/pom.xml
@@ -142,6 +142,15 @@
             <version>6.4.4.Final</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/com.h2database/h2 -->
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <version>2.2.224</version>
+            <scope>test</scope>
+        </dependency>
+
+
     </dependencies>
 
     <build>
