Added TraineeRegistrationDTO class, ControllerExceptionHandler, TraineeController (Register Trainee endpoint), configured Mvc Config and web initializer for Tomcat Server

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,12 @@ build/
 
 ### Mac OS ###
 .DS_Store
+
+# Ignore SonarLint related files
+.sonarlint/
+
+# Ignore SonarQube analysis properties
+sonar-project.properties
+
+# Ignore SonarQube report files
+/sonar-report/
